Fixed Layout Issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,71 @@
-h1 {
+/* set the properties to blanks */
+* {
   margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+#header {
+  background-color: #0f0f0f;
+  width: 100%;
+  height: 100px;
+  font-size: 5.5em;
+  color: white;
+}
+
+#navbar {
+  background-color: #424242;
+  width: 100%;
+  height: 25px;
+}
+
+#navbar button {
+  background-color: inherit;
+  margin: 2px;
+  color: white;
+}
+
+#navbar a:-webkit-any-link {
+  color: white;
+  text-decoration: none;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+#sidenav {
+  border: 1px solid black;
+  width: 11%;
+  height: 400px;
+  float: left;
+}
+
+#smallbar {
+  border: 1px solid black;
+  width: 5%;
+  height: 400px;
+  float: left;
+  position: absolute;
+}
+
+#body {
+  border: 1px solid red;
+  width: 40px;
+  height: 400px;
+  display: inline-block;
+}
+
+#footerspacer {
+  background-color: #424242;
+  width: auto;
+  height: 20px;
+}
+
+#footer {
+  background-color: #0f0f0f;
+  width: auto;
+  height: 100px;
 }
 
 body {
-  margin: auto;
-  margin-top: 0;
-  background-color: grey;
-}
-.sideMenuButton, p {
-  display: inline-block;
-  margin: 0;
-}
-
-.sideNav {
-  width: 11%;
-  height: 100%;
-  display: inline-block;
-  background-color: white;
-}
-
-#menu {
-  display: inline-block;
-}
-
-button {
-    background-color: #3d3d3d;
-    border: none;
-    font-size: 15px;
-}
-button a:-webkit-any-link {
-  color: white;
-  cursor: pointer;
-  text-decoration: none;
-}
-button a:hover {
-  color: grey;
-}
-
-.navbar {
-  background-color: #3d3d3d;
-  width: 100%;
-  color: white;
-}
-
-.main, p {
-  width: 78%;
-  margin: auto;
-  margin-top: 0;
-  background-color: white;
+    background-color: #5d5d5d;
 }
